# zool

./: .gitignore  CHANGES.md  README.md  layout.ai  plotting.py  pyproject.toml  requirements.txt  setup.py  zooldev_conda_environment.yaml
docs/source/: building-layouts.rst  conf.py  getting-started.rst  index.rst  save-and-load.rst
examples/: complicated_stack.py  demo.py  simple_vertical_stack.py  test.py
source/Zool.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/zool/: __init__.py  colours.py  constraints.py  core.py  decor.py  exceptions.py  factory.py  layout.py  timeseries.py
tests/: core_unit_tests.py  json_unit_tests.py  kiwi_layout.py  layout_unit_tests.py  test.py
